# scratchsocket

./: .gitignore  CMakeLists.txt  README.md  gen.bat  gen.sh  make_.bat  make_.sh
src/: main.c
src/gotest/: main.go
